@@ -11,27 +11,10 @@ icon_DATA =\
 	stock_headphones.png		\
 	stock_insert-video-plugin.png 	\
 	stock_line_in.png 		\
-	stock_media-fwd.png 		\
-	stock_media-next.png 		\
-	stock_media-pause.png 		\
-	stock_media-play.png 		\
-	stock_media-prev.png 		\
-	stock_media-rec.png 		\
-	stock_media-rew.png 		\
-	stock_shuffle.png 	\
-	stock_media-stop.png 		\
-	stock_mic.png 			\
 	stock_midi.png 			\
 	stock_music-library.png		\
 	stock_playlist.png		\
 	stock_smart-playlist.png	\
-	stock_repeat.png 		\
-	stock_volume.png 		\
-	stock_volume-0.png 		\
-	stock_volume-max.png 		\
-	stock_volume-med.png 		\
-	stock_volume-min.png 		\
-	stock_volume-mute.png 		\
 	$(NULL)
 
 EXTRA_DIST = $(icon_DATA)
